@@ -1,8 +1,10 @@
 package com.library.services;
 
 import com.library.models.Book;
+import com.library.models.BookCreatedEvent;
 import com.library.projections.BookView;
 import com.library.repositories.BookRepository;
+import com.library.services.event.EventBus;
 import com.library.userModel.UserBook;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,12 +18,35 @@ public class BookService implements IBookService {
     @Autowired
     private BookRepository bookRepository;
 
+    @Autowired
+    private AuditService auditService;
+
+    @Autowired
+    private EventBus eventBus;
+
     @Transactional
     public Book createBook(Book book) {
-        if (book.getTitle() == null || book.getTitle().isBlank()) {
+
+        if (book.getTitle() == null || book.getTitle().trim().isEmpty()) {
             throw new RuntimeException("Назва книги не може бути порожньою");
         }
-        return bookRepository.save(book);
+
+        Book saved = bookRepository.save(book);
+
+        //  SYNC
+        try {
+            auditService.log("BOOK_CREATED_SYNC", saved.getTitle());
+        } catch (Exception e) {
+            System.err.println("Audit sync failed");
+        }
+
+        // ASYNC
+        eventBus.publish(new BookCreatedEvent(
+                saved.getId(),
+                saved.getTitle()
+        ));
+
+        return saved;
     }
 
     @Transactional(readOnly = true)
